Always compile through Maven compiler plugin